--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
 	<head>
 		<title>ayyekou</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
+		<meta charset=utf-8>
+		<link rel=stylesheet href=style.css>
 	</head>
 
 	<body>
-		<h1><a class="title" href="https://github.com/ayyekou">ayyekou</a></h1>
-
+		<div class=menu><a href=https://twitter.com/ayyekou>twitter</a>
+		<span><h1><a class=title href=https://github.com/ayyekou>ayyekou</a></h1></span>
+		<h2>blog posts:</h2>
 		<ul>
