--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div class=menu><a href=https://twitter.com/ayyekou>twitter</a>
-		<span><h1><a class=title href=https://github.com/ayyekou>ayyekou</a></h1></span>
+		<div class=menu><a href=https://twitter.com/ayyekou>twitter</a></div>
+		<h1><a class=title href=https://github.com/ayyekou>ayyekou</a></h1>
 		<h2>blog posts:</h2>
 		<ul>
