--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	</head>
 
 	<body>
-		<div class=menu><a href=https://twitter.com/ayyekou>twitter</a></div>
-		<h1><a class=title href=https://github.com/ayyekou>ayyekou</a></h1>
+		<div class="menu recolor"><a href=https://twitter.com/ayyekou><img src=pics/twitter-logo.svg></img></a></div>
+		<div class="menu recolor"><a href=https://github.com/ayyekou><img src=pics/github-logo.svg></img></a></div>
+		<div class="menu recolor"><a href=https://www.youtube.com/channel/UC1qGdCYFg8H1B5XzFpWWyYA><img src=pics/youtube-logo.svg></img></a></div>
+		
+		<h1 style="padding-top: 10px;">ayyekou</h1>
 		<h2>blog posts:</h2>
 		<ul>
