--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 		<div class="menu recolor"><a href=https://www.youtube.com/channel/UC1qGdCYFg8H1B5XzFpWWyYA><img src=pics/youtube-logo.svg></img></a></div>
 		
 		<h1 style="padding-top: 10px;">ayyekou</h1>
-		<h2>blog posts:</h2>
+		<h2>articles:</h2>
 		<ul>
+			<li><a href=blog/31-03-2021.html>mgbobster</a></li>
